force-app/main/default/objects/Lead/fields/Diagnosed_Mental_Health_Issue__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_Mental_Health_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnosed Mental Health Issue?</label>
    <type>Checkbox</type>
</CustomField>