force-app/main/default/objects/Lead/fields/Diagnosed_Mental_Health_Issue_Info__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_Mental_Health_Issue_Info__c</fullName>
    <label>Diagnosed Mental Health Issue Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>