force-app/main/default/objects/Lead/fields/Do_you_drive__c.field-meta.xml
<CustomField>
    <fullName>Do_you_drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you drive?</label>
    <type>Checkbox</type>
</CustomField>