force-app/main/default/objects/Lead/fields/Do_you_have_a_license_AURA__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_license_AURA__c</fullName>
    <label>Do you have a license AURA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>