force-app/main/default/objects/Lead/fields/Eating_Disorder_Other__c.field-meta.xml
<CustomField>
    <fullName>Eating_Disorder_Other__c</fullName>
    <label>Eating Disorder Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>