force-app/main/default/objects/Lead/fields/Eating_Disorder_Type__c.field-meta.xml
<CustomField>
    <fullName>Eating_Disorder_Type__c</fullName>
    <label>Eating Disorder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Binge Eating</fullName>
            </value>
            <value>
                <fullName>Restricting Intake</fullName>
            </value>
            <value>
                <fullName>Compulsive Exercise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>