force-app/main/default/objects/Lead/fields/Employed__c.field-meta.xml
<CustomField>
    <fullName>Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employed?</label>
    <type>Checkbox</type>
</CustomField>