force-app/main/default/objects/Lead/fields/Employment_Info__c.field-meta.xml
<CustomField>
    <fullName>Employment_Info__c</fullName>
    <label>Employment Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>