force-app/main/default/objects/Lead/fields/Ethnicity_AURA__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_AURA__c</fullName>
    <label>Ethnicity AURA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic</fullName>
            </value>
            <value>
                <fullName>Non-Hispanic</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>