force-app/main/default/objects/Lead/fields/Ethnicity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Ethnicity values provided by Sigmund</inlineHelpText>
    <label>Ethnicity</label>
    <referenceTo>Sigmund_Ethnicity__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>