force-app/main/default/objects/Lead/fields/Ever_had_an_Overdose__c.field-meta.xml
<CustomField>
    <fullName>Ever_had_an_Overdose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ever had an Overdose?</label>
    <type>Checkbox</type>
</CustomField>