force-app/main/default/objects/Lead/fields/Family_History_of_Mental_Health_Issues__c.field-meta.xml
<CustomField>
    <fullName>Family_History_of_Mental_Health_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family History of Mental Health Issues?</label>
    <type>Checkbox</type>
</CustomField>