force-app/main/default/objects/Lead/fields/Family_History_of_SUD__c.field-meta.xml
<CustomField>
    <fullName>Family_History_of_SUD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family History of SUD?</label>
    <type>Checkbox</type>
</CustomField>