force-app/main/default/objects/Lead/fields/Family_History_of_SUD_Notes__c.field-meta.xml
<CustomField>
    <fullName>Family_History_of_SUD_Notes__c</fullName>
    <label>Family History of SUD Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>