force-app/main/default/objects/Lead/fields/FHV_Availability__c.field-meta.xml
<CustomField>
    <fullName>FHV_Availability__c</fullName>
    <label>FHV Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>