force-app/main/default/objects/Lead/fields/First_Responder__c.field-meta.xml
<CustomField>
    <fullName>First_Responder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Responder?</label>
    <type>Checkbox</type>
</CustomField>