force-app/main/default/objects/Lead/fields/Gave_Referral__c.field-meta.xml
<CustomField>
    <fullName>Gave_Referral__c</fullName>
    <label>Unqualified, Gave Referral?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, gave referral</fullName>
                <label>Passed to BD for referral</label>
            </value>
            <value>
                <fullName>No, did not want referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>