force-app/main/default/objects/Lead/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Necessary for Google - Do not delete.</description>
    <label>GCLID</label>
    <type>TextArea</type>
</CustomField>