force-app/main/default/objects/Lead/fields/Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity__c</fullName>
    <label>Gender Identity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Female</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Female-to-Male (FTM)/Transgender Male/Trans Man</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Male-to-Female (MTF)/Transgender Female/Trans Woman</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Genderqueer, neither exclusively male nor female</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Additional gender category or other, please specify</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Choose not to disclose</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>