force-app/main/default/objects/Lead/fields/Google_Keywords_Used__c.field-meta.xml
<CustomField>
    <fullName>Google_Keywords_Used__c</fullName>
    <label>Google Keywords Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>