force-app/main/default/objects/Lead/fields/Group_Number_Aura__c.field-meta.xml
<CustomField>
    <fullName>Group_Number_Aura__c</fullName>
    <label>Group#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>