force-app/main/default/objects/Lead/fields/Guns__c.field-meta.xml
<CustomField>
    <fullName>Guns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guns?</label>
    <type>Checkbox</type>
</CustomField>