force-app/main/default/objects/Lead/fields/Has_Children__c.field-meta.xml
<CustomField>
    <fullName>Has_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Children</label>
    <type>Checkbox</type>
</CustomField>