force-app/main/default/objects/Lead/fields/Has_Current_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Has_Current_Doctor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Current Doctor</label>
    <type>Checkbox</type>
</CustomField>