force-app/main/default/objects/Lead/fields/Has_Parent__c.field-meta.xml
<CustomField>
    <fullName>Has_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Parent</label>
    <type>Checkbox</type>
</CustomField>