force-app/main/default/objects/Lead/fields/Has_Psychiatrist__c.field-meta.xml
<CustomField>
    <fullName>Has_Psychiatrist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Psychiatrist</label>
    <type>Checkbox</type>
</CustomField>