force-app/main/default/objects/Lead/fields/Has_Siblings__c.field-meta.xml
<CustomField>
    <fullName>Has_Siblings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Siblings</label>
    <type>Checkbox</type>
</CustomField>