force-app/main/default/objects/Lead/fields/Has_Therapist__c.field-meta.xml
<CustomField>
    <fullName>Has_Therapist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Therapist</label>
    <type>Checkbox</type>
</CustomField>