force-app/main/default/objects/Lead/fields/Health_Care_Proxy_AURA__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Proxy_AURA__c</fullName>
    <label>Health Care Proxy AURA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>