force-app/main/default/objects/Lead/fields/Healthcare_Proxy_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Proxy_in_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Healthcare Proxy in Place?</label>
    <type>Checkbox</type>
</CustomField>