force-app/main/default/objects/Lead/fields/Healthcare_Proxy_Info__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Proxy_Info__c</fullName>
    <label>Healthcare Proxy Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>