force-app/main/default/objects/Lead/fields/History_of_Homicidal_Suicidal__c.field-meta.xml
<CustomField>
    <fullName>History_of_Homicidal_Suicidal__c</fullName>
    <label>History of Homicidal/Suicidal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suicide - Yes, Ideation</fullName>
            </value>
            <value>
                <fullName>Suicide - Yes, Attempt</fullName>
            </value>
            <value>
                <fullName>Homicide - Yes, Ideation</fullName>
            </value>
            <value>
                <fullName>Homicide - Yes, Attempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>