force-app/main/default/objects/Lead/fields/History_of_Self_Injury__c.field-meta.xml
<CustomField>
    <fullName>History_of_Self_Injury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History of Self Injury?</label>
    <type>Checkbox</type>
</CustomField>