force-app/main/default/objects/Lead/fields/History_of_Self_Injury_Info__c.field-meta.xml
<CustomField>
    <fullName>History_of_Self_Injury_Info__c</fullName>
    <label>History of Self Injury Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>