force-app/main/default/objects/Lead/fields/History_of_Trauma__c.field-meta.xml
<CustomField>
    <fullName>History_of_Trauma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History of Trauma?</label>
    <type>Checkbox</type>
</CustomField>