force-app/main/default/objects/Lead/fields/HLOC_Referral__c.field-meta.xml
<CustomField>
    <fullName>HLOC_Referral__c</fullName>
    <label>HLOC Referral?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes-Trusted</fullName>
            </value>
            <value>
                <fullName>Yes-Other</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>