force-app/main/default/objects/Lead/fields/Homicide_Suicide_notes__c.field-meta.xml
<CustomField>
    <fullName>Homicide_Suicide_notes__c</fullName>
    <label>Homicide/Suicide notes</label>
    <type>TextArea</type>
</CustomField>