force-app/main/default/objects/Lead/fields/How_did_you_first_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_first_hear_about_us__c</fullName>
    <inlineHelpText>How did you first hear of Aware Recovery Care? (Probe to get best possible response.)</inlineHelpText>
    <label>How did you first hear about us?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>