force-app/main/default/objects/Lead/fields/How_helpful_was_our_website_in_decision__c.field-meta.xml
<CustomField>
    <fullName>How_helpful_was_our_website_in_decision__c</fullName>
    <inlineHelpText>How helpful was our website in your decision-making process?</inlineHelpText>
    <label>How helpful was our website in decision?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely helpful</fullName>
            </value>
            <value>
                <fullName>Somewhat helpful</fullName>
            </value>
            <value>
                <fullName>Not helpful</fullName>
            </value>
            <value>
                <fullName>Not a factor in decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>