force-app/main/default/objects/Lead/fields/In_Net_Co_Insurance__c.field-meta.xml
<CustomField>
    <fullName>In_Net_Co_Insurance__c</fullName>
    <label>Co-Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>