force-app/main/default/objects/Lead/fields/In_Net_Co_Payment__c.field-meta.xml
<CustomField>
    <fullName>In_Net_Co_Payment__c</fullName>
    <label>Co-Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>