force-app/main/default/objects/Lead/fields/In_Net_Out_of_Pkt_Remaining_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>In_Net_Out_of_Pkt_Remaining_Time_Period__c</fullName>
    <label>Remaining Time Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>