force-app/main/default/objects/Lead/fields/In_School__c.field-meta.xml
<CustomField>
    <fullName>In_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In School?</label>
    <type>Checkbox</type>
</CustomField>