force-app/main/default/objects/Lead/fields/Insurance_Address__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Address__c</fullName>
    <label>Insurance Address</label>
    <type>TextArea</type>
</CustomField>