force-app/main/default/objects/Lead/fields/Insurance_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier_Name__c</fullName>
    <label>Insurance Carrier Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Ambetter</fullName>
            </value>
            <value>
                <fullName>Anthem</fullName>
            </value>
            <value>
                <fullName>Beacon Health Options</fullName>
            </value>
            <value>
                <fullName>BCBS Other</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Connecticare</fullName>
            </value>
            <value>
                <fullName>Harvard Pilgrim</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Magellan</fullName>
            </value>
            <value>
                <fullName>Medicaid/State Insurance</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>MED MUTUAL OF OHIO</fullName>
            </value>
            <value>
                <fullName>Oxford</fullName>
            </value>
            <value>
                <fullName>Tufts</fullName>
            </value>
            <value>
                <fullName>Unicare</fullName>
            </value>
            <value>
                <fullName>UnitedHealthCare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Fallon</fullName>
                <isActive>false</isActive>
                <label>Fallon</label>
            </value>
            <value>
                <fullName>Healthy CT</fullName>
                <isActive>false</isActive>
                <label>Healthy CT</label>
            </value>
            <value>
                <fullName>Husky</fullName>
                <isActive>false</isActive>
                <label>Husky</label>
            </value>
            <value>
                <fullName>MA Medicaid</fullName>
                <isActive>false</isActive>
                <label>MA Medicaid</label>
            </value>
            <value>
                <fullName>ME Medicaid (Mainecare)</fullName>
                <isActive>false</isActive>
                <label>ME Medicaid (Mainecare)</label>
            </value>
            <value>
                <fullName>Martins Point</fullName>
                <isActive>false</isActive>
                <label>Martins Point</label>
            </value>
            <value>
                <fullName>NH Medicaid (Well-sense, NHHF)</fullName>
                <isActive>false</isActive>
                <label>NH Medicaid (Well-sense, NHHF)</label>
            </value>
            <value>
                <fullName>Optum</fullName>
                <isActive>false</isActive>
                <label>Optum</label>
            </value>
            <value>
                <fullName>Tufts Mass Health (Medicaid)</fullName>
                <isActive>false</isActive>
                <label>Tufts Mass Health (Medicaid)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>