force-app/main/default/objects/Lead/fields/Insurance_Carrier_Other__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier_Other__c</fullName>
    <label>Insurance Carrier Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>