force-app/main/default/objects/Lead/fields/Insurance_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Check Complete</label>
    <type>Checkbox</type>
</CustomField>