force-app/main/default/objects/Lead/fields/Insurance_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Member_ID__c</fullName>
    <label>Insurance Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>