force-app/main/default/objects/Lead/fields/Intake_Complete_No_BPS_Availability__c.field-meta.xml
<CustomField>
    <fullName>Intake_Complete_No_BPS_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Complete &amp; No BPS Availability</label>
    <type>Checkbox</type>
</CustomField>