force-app/main/default/objects/Lead/fields/Intake_Questions_Complete__c.field-meta.xml
<CustomField>
    <fullName>Intake_Questions_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Questions Complete</label>
    <type>Checkbox</type>
</CustomField>