force-app/main/default/objects/Lead/fields/Is_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Hidden field. Is used in Conversion workflow. CHC 11/16/17</description>
    <label>Is Lead?</label>
    <type>Checkbox</type>
</CustomField>