force-app/main/default/objects/Lead/fields/Language_Ability__c.field-meta.xml
<CustomField>
    <fullName>Language_Ability__c</fullName>
    <label>Language Ability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expressed Signed</fullName>
            </value>
            <value>
                <fullName>Expressed Spoken</fullName>
            </value>
            <value>
                <fullName>Expressed Written</fullName>
            </value>
            <value>
                <fullName>Received Signed</fullName>
            </value>
            <value>
                <fullName>Received Spoken</fullName>
            </value>
            <value>
                <fullName>Received Written</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>