force-app/main/default/objects/Lead/fields/Last_Sigmund_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sigmund_Sync_Date__c</fullName>
    <inlineHelpText>Last time that this record was synchronized to Sigmund</inlineHelpText>
    <label>Last Sigmund Sync Date</label>
    <type>DateTime</type>
</CustomField>