force-app/main/default/objects/Lead/fields/Lead_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reference_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Lead Reference ID</label>
    <type>Text</type>
</CustomField>