force-app/main/default/objects/Lead/fields/Legal_Documents_Requested__c.field-meta.xml
<CustomField>
    <fullName>Legal_Documents_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Documents Requested?</label>
    <type>Checkbox</type>
</CustomField>