force-app/main/default/objects/Lead/fields/Legal_Documents_Requested_AURA__c.field-meta.xml
<CustomField>
    <fullName>Legal_Documents_Requested_AURA__c</fullName>
    <label>Legal Documents Requested AURA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>