force-app/main/default/objects/Lead/fields/Legal_Issues_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Legal_Issues_Explanation__c</fullName>
    <label>Legal Issues Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>