force-app/main/default/objects/Lead/fields/Legal_Issues_Present__c.field-meta.xml
<CustomField>
    <fullName>Legal_Issues_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Issues Present?</label>
    <type>Checkbox</type>
</CustomField>