force-app/main/default/objects/Lead/fields/Living_Environment__c.field-meta.xml
<CustomField>
    <fullName>Living_Environment__c</fullName>
    <label>Living Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Significant other</fullName>
            </value>
            <value>
                <fullName>Parent(s)</fullName>
            </value>
            <value>
                <fullName>Sober House</fullName>
            </value>
            <value>
                <fullName>Halfway House</fullName>
            </value>
            <value>
                <fullName>Roommate</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Relative(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>